# netdisk

./: .gitignore  pyproject.toml
netdisk/: __init__.py  _completion.py  cli.py  client.py  config.py  constants.py  display.py  utils.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_cli.py  test_client.py  test_config.py  test_utils.py
